force-app/main/default/objects/Case_User_Invitation__c/Case_User_Invitation__c.object-meta.xml
<CustomObject>
    <label>Case User Invitation</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Case User Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case User Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>