force-app/main/default/objects/Case_User_Invitation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case User Invitations</relationshipLabel>
    <relationshipName>Case_User_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>