force-app/main/default/objects/Case_User_Invitation__c/fields/INAP_Org_URL__c.field-meta.xml
<CustomField>
    <fullName>INAP_Org_URL__c</fullName>
    <formula>$CustomMetadata.INAP_URL__mdt.INAP_Org_URL.URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>INAP Org URL</label>
    <type>Text</type>
</CustomField>