force-app/main/default/objects/Case_User_Invitation__c/fields/Reason_for_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Rejection__c</fullName>
    <label>Reason for Rejection</label>
    <type>TextArea</type>
</CustomField>