force-app/main/default/objects/Case_User_Invitation__c/recordTypes/ArbitratorView.recordType-meta.xml
<RecordType>
    <fullName>ArbitratorView</fullName>
    <active>true</active>
    <label>Arbitrator View</label>
</RecordType>