force-app/main/default/objects/Case_User_Invitation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Reason_for_Rejection__c</columns>
    <columns>Role__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>